#  Copyright© 2022 Raúl Wolters(1)
#
#  This file is part of rustronomy-core.
#
#  rustronomy is free software: you can redistribute it and/or modify it under
#  the terms of the European Union Public License version 1.2 or later, as
#  published by the European Commission.
#
#  rustronomy is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
#  A PARTICULAR PURPOSE. See the European Union Public License for more details.
#
#  You should have received a copy of the EUPL in an/all official language(s) of
#  the European Union along with rustronomy.  If not, see 
#  <https://ec.europa.eu/info/european-union-public-licence_en/>.
#
#  (1) Resident of the Kingdom of the Netherlands; agreement between licensor and
#  licensee subject to Dutch law as per article 15 of the EUPL.

[package]
name = "rustronomy-core"
version = "0.4.1"
edition = "2021"
readme = "./README.md"
license = "EUPL-1.2"
repository = "https://github.com/smups/rustronomy/"
homepage = "https://github.com/smups/rustronomy/"
authors = ["Raúl Wolters <rawolters11@gmail.com>"]
description = "core dependency for rustronomy crates providing interoperable types"
keywords = ["astronomy", "astrophysics", "rustronomy"]
categories = ["science"]

[dependencies]
ndarray = "0.15"
chrono = "0.4"
num-traits = "0.2"
indexmap = "1"