[package]
name = "rustronomy-fits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
simple-error = "0.2"
ndarray = "0.15"
num-traits = "0.2"
chrono = "0.4"
rayon = "1"
rustronomy-core = {path = "../rustronomy-core"}

[dev-dependencies]
#plotters = {git = "https://github.com/38/plotters"}
dirs = "4"